# deepstream_apps

./: .gitignore  FAQ.md  HOWTO.md  README.md  main.py  pyproject.toml
apps/common/: bus_call.py
apps/deepstream-test1/: app.py  dstest1_pgie_config.txt  my_deepstream_pipeline.dot  test_1.py  tutorial.ipynb
apps/deepstream-test2/: app.py  dstest2_pgie_config.txt
apps/deepstream-test3/: deepstream_test_3.py
bindings/: BINDINGSGUIDE.md  CMakeLists.txt  README.md  pyds-1.2.2-cp312-cp312-linux_x86_64.whl  pyproject.toml  setup.py
bindings/docstrings/: nvdsinferdoc.h  nvdsmetadoc.h  preprocessmetadoc.h  roimetadoc.h
bindings/include/bind/: bind_string_property_definitions.h  bindpreprocessmeta.hpp  bindroimeta.hpp
bindings/qemu_docker/: ubuntu-cross-aarch64.Dockerfile
bindings/src/: bindnvdsinfer.cpp  bindnvdsmeta.cpp  bindpreprocessmeta.cpp  bindroimeta.cpp  bindtrackermeta.cpp  pyds.cpp  utils.cpp
docs/: README.md  bindings_file_list.txt  conf.py  index.rst
notebooks/: deepstream_test_1.ipynb  deepstream_test_4.ipynb
notebooks/configs/: dslaunchpad_sgie2_config.txt
samples/: prepare_ds_triton_model_repo.sh  prepare_ds_triton_tao_model_repo.sh
samples/configs/deepstream-app-triton-grpc/: README  source30_1080p_dec_infer-resnet_tiled_display.txt  source4_1080p_dec_infer-resnet_tracker_sgie_tiled_display.txt  source4_1080p_dec_preprocess_infer-resnet_tracker_sgie_tiled_display.txt
samples/streams/: sample_cans_jpg.tbz2
samples/triton_tao_model_repo/: Primary_Detector
tests/integration/: README.md  ds_sgie1_config.txt  test.py
(+34 files in other folders)
